k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-crud
  labels:
    app: php-crud
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: php-crud
